--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <script defer src="calculator.js"></script>
     <title>Calculator</title>
 </head>
 <body>
 </body>
-<script async defer src="calculator.js"></script>
+
 </html>
